<resources>
    <string name="app_name">Food Tracker</string>

    <!-- Common -->
    <string name="update">Update</string>
    <string name="add">Add</string>

    <!-- Login Activity -->
    <string name="login_with">Log in with</string>
    <string name="email_hint">Input email</string>
    <string name="password_hint">Input password</string>
    <string name="login">Log in</string>

    <!-- Register Activity -->
    <string name="register_with">Register with</string>
    <string name="register">Register</string>
    <string name="repeat_password_hint">Repeat password</string>

    <!-- Profile Fragment -->
    <string name="name_hint">Input your name</string>
    <string name="age_hint">Input your age</string>
    <string name="height_hint">Input your height</string>
    <string name="weight_hint">Input your weight</string>
    <string name="lifestyle_hint">Input your lifestyle</string>
    <string name="profile_updated">Profile is successfully updated</string>
    <string name="update_profile">Update profile</string>

    <!-- Main Activity -->
    <string name="title_activity_main">MainActivity</string>
    <string name="title_overview">Overview</string>
    <string name="title_eat">Eat</string>
    <string name="title_profile">Profile</string>

    <!-- Calories fragment -->
    <string name="calories_hint">Calories: </string>
    <string name="status_hint">Status: </string>

    <!-- Food item -->
    <string name="protein_hint">Protein: </string>
    <string name="fats_hint">Fats: </string>
    <string name="carbohydrates_hint">Carbohydrates: </string>

    <!-- Eat fragment -->
    <string name="search_hint">Search in food list</string>
    <string name="eat">Eat</string>
    <string name="end_eat_food">Food item recorded successfully</string>

    <!-- Add food activity -->
    <string name="food_hint">Food name</string>
    <string name="food_protein">Protein: </string>
    <string name="food_fats">Fats: </string>
    <string name="food_carbohydrates">Carbohydrates: </string>
    <string name="add_food">Add food</string>
</resources>
